// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmsTSApolloGraphQLProject has reasonable configuration 1`] = `
{
  "compilerOptions": {
    "allowUnreachableCode": false,
    "allowUnusedLabels": false,
    "checkJs": true,
    "esModuleInterop": true,
    "exactOptionalPropertyTypes": false,
    "forceConsistentCasingInFileNames": true,
    "isolatedModules": true,
    "moduleResolution": "node16",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noImplicitOverride": true,
    "noImplicitReturns": true,
    "noPropertyAccessFromIndexSignature": false,
    "noUncheckedIndexedAccess": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "outDir": "lib",
    "rootDir": "src",
    "skipLibCheck": true,
    "strict": true,
  },
  "exclude": [],
  "extends": "@tsconfig/node18/tsconfig.json",
  "include": [
    "src/**/*.ts",
  ],
  "ts-node": {
    "esm": true,
    "experimentalSpecifierResolution": "node",
    "preferTsExts": false,
  },
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 2`] = `
{
  "compilerOptions": {
    "esModuleInterop": true,
    "exactOptionalPropertyTypes": false,
    "moduleResolution": null,
    "noEmit": true,
    "noPropertyAccessFromIndexSignature": false,
  },
  "exclude": [
    "node_modules",
  ],
  "extends": "@tsconfig/node18/tsconfig.json",
  "include": [
    "src/**/*.ts",
    "test/**/*.ts",
    "scripts/*.ts",
    "codegen.ts",
    ".projenrc.ts",
    "projenrc/**/*.ts",
  ],
  "ts-node": {
    "esm": true,
    "experimentalSpecifierResolution": "node",
    "preferTsExts": false,
  },
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "dependencies": {
    "@apollo/server": "*",
    "@pothos/core": "*",
    "@pothos/plugin-prisma": "*",
    "@prisma/client": "*",
    "graphql": "*",
    "zod": "*",
  },
  "devDependencies": {
    "@10mi2/tms-projen-projects": "*",
    "@faker-js/faker": "*",
    "@graphql-codegen/cli": "*",
    "@graphql-codegen/client-preset": "*",
    "@graphql-eslint/eslint-plugin": "*",
    "@graphql-typed-document-node/core": "*",
    "@tsconfig/node18": "*",
    "@types/jest": "*",
    "@types/node": "^18",
    "@typescript-eslint/eslint-plugin": "^6",
    "@typescript-eslint/parser": "^6",
    "constructs": "^10.0.0",
    "esbuild": "*",
    "eslint": "^8",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "graphql": "*",
    "jest": "*",
    "jest-junit": "^15",
    "jest-mock-extended": "*",
    "nodemon": "*",
    "prettier": "*",
    "prisma": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": ">=10.9.2",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "moduleNameMapper": {
      "^(\\.{1,2}/.*)\\.m?js$": "$1",
    },
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.m?[tj]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
          "useESM": true,
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test",
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "bundle:index": "npx projen bundle:index",
    "bundle:index:watch": "npx projen bundle:index:watch",
    "clobber": "npx projen clobber",
    "codegen": "npx projen codegen",
    "codegen:watch": "npx projen codegen:watch",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "postinstall": "npx projen postinstall",
    "pre-compile": "npx projen pre-compile",
    "prisma:generate": "npx projen prisma:generate",
    "projen": "npx projen",
    "save-schema": "npx projen save-schema",
    "start": "npx projen start",
    "start:dev": "npx projen start:dev",
    "test": "npx projen test",
    "test:update": "npx projen test:update",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 4`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "jest.jestCommandLine": "npm test --",
  "jest.rootPath": "./",
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 5`] = `
{
  "recommendations": [
    "dbaeumer.vscode-eslint",
    "Orta.vscode-jest",
  ],
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 6`] = `
{
  "ignorePatterns": [
    "*.js",
    "*.d.ts",
    "node_modules/",
    "*.generated.ts",
    "coverage",
    "!.projenrc.ts",
    "!projenrc/**/*.ts",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
      ],
      "processor": "@graphql-eslint/graphql",
    },
    {
      "env": {
        "jest": true,
        "node": true,
      },
      "extends": [
        "plugin:import/typescript",
        "plugin:prettier/recommended",
      ],
      "files": [
        "*.ts",
      ],
      "parser": "@typescript-eslint/parser",
      "parserOptions": {
        "ecmaVersion": 2018,
        "project": "./tsconfig.dev.json",
        "sourceType": "module",
      },
      "plugins": [
        "@typescript-eslint",
        "import",
      ],
      "rules": {
        "@typescript-eslint/member-ordering": [
          "error",
          {
            "default": [
              "public-static-field",
              "public-static-method",
              "protected-static-field",
              "protected-static-method",
              "private-static-field",
              "private-static-method",
              "field",
              "constructor",
              "method",
            ],
          },
        ],
        "@typescript-eslint/no-floating-promises": [
          "error",
        ],
        "@typescript-eslint/no-require-imports": [
          "error",
        ],
        "@typescript-eslint/no-shadow": [
          "error",
        ],
        "@typescript-eslint/return-await": [
          "error",
        ],
        "dot-notation": [
          "warn",
        ],
        "import/no-extraneous-dependencies": [
          "error",
          {
            "devDependencies": [
              "**/test/**",
              "**/build-tools/**",
              ".projenrc.ts",
              "projenrc/**/*.ts",
            ],
            "optionalDependencies": false,
            "peerDependencies": true,
          },
        ],
        "import/no-unresolved": [
          "error",
        ],
        "import/order": [
          "warn",
          {
            "alphabetize": {
              "caseInsensitive": true,
              "order": "asc",
            },
            "groups": [
              "builtin",
              "external",
            ],
          },
        ],
        "key-spacing": [
          "warn",
        ],
        "no-bitwise": [
          "error",
        ],
        "no-duplicate-imports": [
          "error",
        ],
        "no-multiple-empty-lines": [
          "warn",
        ],
        "no-return-await": [
          "off",
        ],
        "no-shadow": [
          "off",
        ],
        "no-trailing-spaces": [
          "warn",
        ],
        "prettier/prettier": [
          "warn",
        ],
      },
      "settings": {
        "import/parsers": {
          "@typescript-eslint/parser": [
            ".ts",
            ".tsx",
          ],
        },
        "import/resolver": {
          "node": {},
          "typescript": {
            "alwaysTryTypes": true,
            "project": "./tsconfig.dev.json",
          },
        },
      },
    },
    {
      "excludedFiles": [
        "schema.graphql",
      ],
      "extends": [
        "plugin:prettier/recommended",
        "plugin:@graphql-eslint/schema-recommended",
        "plugin:@graphql-eslint/operations-recommended",
      ],
      "files": [
        "*.graphql",
      ],
      "parserOptions": {
        "operations": "./test/**/*.ts",
        "schema": "./schema.graphql",
      },
      "rules": {
        "prettier/prettier": "warn",
      },
    },
    {
      "extends": [
        "plugin:prettier/recommended",
        "plugin:@graphql-eslint/schema-recommended",
      ],
      "files": [
        "schema.graphql",
      ],
      "parser": "@graphql-eslint/eslint-plugin",
      "parserOptions": {
        "schema": "./schema.graphql",
      },
      "plugins": [
        "@graphql-eslint",
      ],
      "rules": {
        "@graphql-eslint/require-description": [
          "error",
          {
            "EnumTypeDefinition": true,
            "InputObjectTypeDefinition": true,
            "InterfaceTypeDefinition": true,
            "ObjectTypeDefinition": true,
            "ScalarTypeDefinition": false,
            "UnionTypeDefinition": true,
          },
        ],
        "@graphql-eslint/strict-id-in-types": [
          "error",
          {
            "exceptions": {
              "suffixes": [
                "Edge",
                "Connection",
              ],
              "types": [
                "PageInfo",
                "Cursor",
              ],
            },
          },
        ],
        "prettier/prettier": "warn",
      },
    },
    {
      "files": [
        ".projenrc.ts",
      ],
      "rules": {
        "@typescript-eslint/no-require-imports": "off",
        "import/no-extraneous-dependencies": "off",
      },
    },
  ],
  "root": true,
}
`;

exports[`TmsTSApolloGraphQLProject has reasonable configuration 7`] = `"v18.18.2"`;
